# PinReady

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  vpinball-fork.sh
.github/workflows/: ci.yml
audiomapping_linux/: README.md
audiomapping_mac/: README.md
audiomapping_windows/: README.md
locales/: ar.toml  bn.toml  cs.toml  de.toml  en.toml  es.toml  fi.toml  fr.toml  hi.toml  id.toml  it.toml  ja.toml  ko.toml  nl.toml  pl.toml  pt.toml  ru.toml  sk.toml  sv.toml  sw.toml  th.toml  tr.toml  ur.toml  vi.toml  zh.toml  zh_tw.toml
src/: app.rs  assets.rs  audio.rs  config.rs  db.rs  i18n.rs  inputs.rs  main.rs  screens.rs  tilt.rs  updater.rs  vbs_patches.rs
src/app/: audio_page.rs  autostart.rs  inputs_page.rs  launcher.rs  launcher_ui.rs  mod.rs  save.rs  screens_page.rs  tables_dir_page.rs
