[package]
name = "pinready"
version = "0.2.5"
edition = "2021"
description = "Cross-platform configurator and launcher for VPinballX standalone"
license = "GPL-3.0-or-later"
repository = "https://github.com/Le-Syl21/PinReady"
homepage = "https://github.com/Le-Syl21/PinReady"
keywords = ["vpinball", "pinball", "cabinet", "launcher", "configurator"]
categories = ["games", "config", "gui"]
readme = "README.md"

[features]
default = []
win-icon = ["winres"]

[dependencies]
# UI
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "file"] }

# Display / Input
sdl3-sys = { version = "0.6", features = ["build-from-source-static"] }
display-info = "0.5"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ini-preserve = "0.1.1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# File dialog
rfd = "0.17"

# File scan
walkdir = "2.5"

# Images
image = { version = "0.25", features = ["png", "jpeg"] }

# B2S parsing (directb2s backglass thumbnail extraction)
directb2s = "0.1"
base64 = "0.22"

# Audio decoding (OGG Vorbis → PCM for SDL3)
symphonia = { version = "0.5", default-features = false, features = ["ogg", "vorbis"] }

# HTTP (GitHub API + release download)
ureq = "3"

# Archive extraction (release downloads)
zip = "8"
flate2 = "1"
tar = "0.4"

# Threading
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Internationalization
rust-i18n = "4"

# Fonts for non-Latin scripts (Arabic, CJK, Devanagari, Thai, etc.)
noto-fonts-dl = { version = "0.1.2", features = ["ar", "hi", "bn", "zh", "zh_tw", "ja", "ko", "th", "ur"] }

# Error handling
anyhow = "1"

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
