[package]
name = "pinready"
version = "0.6.0"
edition = "2021"
description = "Cross-platform configurator and launcher for Visual Pinball standalone"
license = "GPL-3.0-or-later"
repository = "https://github.com/Le-Syl21/PinReady"
homepage = "https://github.com/Le-Syl21/PinReady"
keywords = ["vpinball", "pinball", "cabinet", "launcher", "configurator"]
categories = ["games", "config", "gui"]
readme = "README.md"

[features]
default = []
win-icon = ["winres"]

[dependencies]
# UI
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "file"] }

# Display / Input
sdl3-sys = { version = "0.6", features = ["build-from-source-static"] }
display-info = "0.5"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ini-preserve = "0.1.1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# File dialog
rfd = "0.17"

# File scan
walkdir = "2.5"

# Images
image = { version = "0.25", features = ["png", "jpeg"] }

# B2S parsing (directb2s backglass thumbnail extraction)
directb2s = "0.1"
base64 = "0.22"

# Audio decoding (OGG Vorbis → PCM for SDL3)
symphonia = { version = "0.5", default-features = false, features = ["ogg", "vorbis"] }

# HTTP (GitHub API + release download)
ureq = "3"

# Archive extraction (release downloads)
zip = "8"
flate2 = "1"
tar = "0.4"

# Threading
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

# Internationalization
rust-i18n = "4"

# Fonts for non-Latin scripts (Arabic, CJK, Devanagari, Thai, etc.)
noto-fonts-dl = { version = "0.1.2", features = ["ar", "hi", "bn", "zh", "zh_tw", "ja", "ko", "th", "ur"] }

# Platform directories (data, config, home)
dirs = "6"

# Error handling
anyhow = "1"
regex = "1"

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver", "winnt"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Intermediate profile: optimized + small but no LTO → builds in ~30-60s, ~70-90MB.
# Use with: cargo build --profile=fast
[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
strip = true

# Use Le-Syl21/egui fork with viewport rotation + cursor lock for kiosk/cabinet mode.
# Remove this block once upstream merges: https://github.com/emilk/egui/issues/4130
[patch.crates-io]
egui        = { git = "https://github.com/Le-Syl21/egui", rev = "3b08da93" }
eframe      = { git = "https://github.com/Le-Syl21/egui", rev = "3b08da93" }
egui_extras = { git = "https://github.com/Le-Syl21/egui", rev = "3b08da93" }
emath       = { git = "https://github.com/Le-Syl21/egui", rev = "3b08da93" }
epaint      = { git = "https://github.com/Le-Syl21/egui", rev = "3b08da93" }
